--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <div id="root"></div>
-
+<div class='one'>
+    <div>
+        <div>
+            <p class='two'></p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
