--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="build/jquery3.js"></script>
+    <script id="deviceScript"  type="text/javascript" src="build/getDevice.js">1476927604000_1000123_697359</script>
 </head>
-<body id="root">
-
+<body>
+   <div id="root"></div>
 </body>
 </html>
